--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "publishbot",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "nodemon app.ts"
+    "start": "node .",
+    "build": "tsc",
+    "dev": "nodemon app.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +16,6 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@discordjs/rest": "^0.3.0",
-    "discord-api-types": "^0.30.0",
     "discord.js": "^13.6.0"
   }
 }
