--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0"
   }
 }
